--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ vim/*/*/plugged
 zsh/*/*/.zsh_history
 
 kubernetes/*/config
+/zsh/.config/zsh/.zsh_sessions/
+/zsh/.config/zsh/.zcompdump-Karl’s MacBook Pro-5.8
