--- a/alacritty/.config/alacritty/dracula.yml
+++ b/alacritty/.config/alacritty/dracula.yml
@@ -39,6 +39,6 @@ colors:
     green: "0x88f298"
     yellow: "0xf5f7a8"
     blue: "0xc4acf5"
-    magenta: "0xa88cf8"
+    magenta: "0xbf9eee"
     cyan: "0xacebfb"
     white: "0xfeffff"
