--- a/kubernetes/.kube/gpu_job.yaml
+++ b/kubernetes/.kube/gpu_job.yaml
@@ -1,26 +1,34 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: karl-job # specify your job name here
+  name: karl-job-8gpu # specify your job name here
 spec:
   template:
     spec:
-      # affinity:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #         - matchExpressions:
-      #           - key: gpu-type
-      #             operator: In
-      #             values:
-      #             - 2080Ti
+      #   affinity:
+      #     nodeAffinity:
+      #       requiredDuringSchedulingIgnoredDuringExecution:
+      #         nodeSelectorTerms:
+      #           - matchExpressions:
+      #               - key: gpu-type
+      #                 operator: In
+      #                 values:
+      #                   - "TITAN RTX"
+      #                   - "V100"
+      #                   - "T4"
+      #                   - "3090Ti"
+      #                   - "A100"
+      #                   - "8000"
+      #                   - "A40"
+
       containers:
         - name: gpu-container
           image: gitlab-registry.nautilus.optiputer.net/jiacheng/docker-images:torch17v4_jiacheng
+          # image: gitlab-registry.nrp-nautilus.io/kwkarlwang/nautilus:latest
           command:
-            - sh
+            - bash
             - -c
-            - "pip install pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py38_cu110_pyt171/download.html && pip install --upgrade wandb && wandb login 648b84df4b362aabbcd11359a700c9a7bcf8ea93 && cd /data/karl/AdaBins-1 && python train.py args_train_nyu.txt"
+            - "conda init && source ~/.bashrc && nvidia-smi && rm -rf /root/.cache && && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_nyu.txt"
           #args:
           #- ""
 
@@ -32,11 +40,11 @@ spec:
           resources:
             limits:
               memory: 8Gi
-              nvidia.com/gpu: "1"
+              nvidia.com/gpu: "8"
               cpu: "12"
             requests:
               memory: 8Gi
-              nvidia.com/gpu: "1"
+              nvidia.com/gpu: "8"
               cpu: "12"
       restartPolicy: Never
       volumes:
