Udpate surfingkeys color

--- a/kubernetes/.kube/gpu_job.yaml
+++ b/kubernetes/.kube/gpu_job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: karl-job-8gpu # specify your job name here
+  name: karl-job # specify your job name here
 spec:
   template:
     spec:
@@ -28,7 +28,7 @@ spec:
           command:
             - bash
             - -c
-            - "conda init && source ~/.bashrc && nvidia-smi && rm -rf /root/.cache && && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_nyu.txt"
+            - "nvidia-smi && rm -rf /root/.cache && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_nyu.txt"
           #args:
           #- ""
 
@@ -39,11 +39,11 @@ spec:
               name: dshm
           resources:
             limits:
-              memory: 8Gi
+              memory: 16Gi
               nvidia.com/gpu: "8"
               cpu: "12"
             requests:
-              memory: 8Gi
+              memory: 16Gi
               nvidia.com/gpu: "8"
               cpu: "12"
       restartPolicy: Never
