--- a/kubernetes/.kube/gpu_pod.yaml
+++ b/kubernetes/.kube/gpu_pod.yaml
@@ -3,17 +3,17 @@ kind: Pod
 metadata:
   name: karl
 spec:
-  affinity:
-    nodeAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 1
-        preference:
-          matchExpressions:
-          - key: gpu-type
-            operator: In
-            values:
-            - "2080Ti"
-            - "V100"
+  #affinity:
+    #nodeAffinity:
+      #preferredDuringSchedulingIgnoredDuringExecution:
+      #- weight: 1
+        #preference:
+          #matchExpressions:
+          #- key: gpu-type
+            #operator: In
+            #values:
+            #- "2080Ti"
+            #- "V100"
   containers:
   - name: gpu-container
     image: gitlab-registry.nautilus.optiputer.net/jiacheng/docker-images:torch17v4_jiacheng
