--- a/kubernetes/.kube/gpu_job.yaml
+++ b/kubernetes/.kube/gpu_job.yaml
@@ -1,26 +1,25 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: karl-job # specify your job name here
+  name: karl-job2 # specify your job name here
 spec:
   template:
     spec:
-      #   affinity:
-      #     nodeAffinity:
-      #       requiredDuringSchedulingIgnoredDuringExecution:
-      #         nodeSelectorTerms:
-      #           - matchExpressions:
-      #               - key: gpu-type
-      #                 operator: In
-      #                 values:
-      #                   - "TITAN RTX"
-      #                   - "V100"
-      #                   - "T4"
-      #                   - "3090Ti"
-      #                   - "A100"
-      #                   - "8000"
-      #                   - "A40"
-
+      #affinity:
+        #nodeAffinity:
+          #requiredDuringSchedulingIgnoredDuringExecution:
+            #nodeSelectorTerms:
+              #- matchExpressions:
+                  #- key: gpu-type
+                    #operator: In
+                    #values:
+                      #- "TITAN RTX"
+                      #- "V100"
+                      #- "T4"
+                      #- "3090Ti"
+                      #- "A100"
+                      #- "8000"
+                      #- "A40"
       containers:
         - name: gpu-container
           image: gitlab-registry.nautilus.optiputer.net/jiacheng/docker-images:torch17v4_jiacheng
@@ -28,9 +27,9 @@ spec:
           command:
             - bash
             - -c
-            - "nvidia-smi && rm -rf /root/.cache && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_nyu.txt"
-          #args:
-          #- ""
+            - "nvidia-smi && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_nyu.txt"
+              #args:
+              #- ""
 
           volumeMounts:
             - mountPath: /data
@@ -40,12 +39,12 @@ spec:
           resources:
             limits:
               memory: 16Gi
-              nvidia.com/gpu: "8"
-              cpu: "16"
+              nvidia.com/gpu: "4"
+              cpu: "12"
             requests:
               memory: 16Gi
-              nvidia.com/gpu: "8"
-              cpu: "16"
+              nvidia.com/gpu: "4"
+              cpu: "12"
       restartPolicy: Never
       volumes:
         - name: data
