--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ kubernetes/*/config
 /zsh/.config/zsh/.zcompdump-Karl’s MacBook Pro-5.8
 /zsh/.config/zsh/*.zwc
 /zsh/.config/zsh/.zcompdump.zwc.old
-/zsh/.config/zsh/.zim/modules/
+/zsh/.config/zsh/.zim/*
 *.old
 /kubernetes/.kube/cache/
-*.old
+/zsh/.config/zsh/.zcompcache/
