--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -155,7 +155,7 @@ font_size 13.0
 #: Default cursor color
 
 # cursor_text_color #111111
-
+cursor_text_color background
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
@@ -712,6 +712,7 @@ hide_window_decorations yes
 
 foreground #ffffe0
 background #282a36
+#background #000000
 
 #: The foreground and background colors
 
