--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code Retina
-# bold_font        auto
-italic_font      Fira Code Italic
-# bold_italic_font auto
+font_family      Fira Code Regular
+bold_font        Fira Code Retina
+italic_font      Fira Code Regular Italic
+bold_italic_font Fira Code Retina Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -46,8 +46,12 @@ font_size 13.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# adjust_line_height  0
+# adjust top
+adjust_line_height  -6
 # adjust_column_width 0
+
+# adjust bottom
+adjust_baseline 5
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -69,6 +73,8 @@ font_size 13.0
 #:     symbol_map codepoints Font Family Name
 
 # disable_ligatures never
+# disable_ligatures cursor
+disable_ligatures always
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -155,7 +161,7 @@ font_size 13.0
 #: Default cursor color
 
 # cursor_text_color #111111
-cursor_text_color background
+#cursor_text_color background
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
@@ -248,7 +254,7 @@ scrollback_pager /usr/local/bin/nvim -u NONE -c "set nonumber nolist showtabline
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+mouse_hide_wait 0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -962,6 +968,7 @@ allow_remote_control yes
 #: ask before opening the link.
 
 # term xterm-kitty
+term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
@@ -1048,6 +1055,7 @@ macos_quit_when_last_window_closed no
 #: and none hides the title in the window and the menu-bar.
 
 # macos_custom_beam_cursor no
+# macos_custom_beam_cursor yes
 
 #: Enable/disable custom mouse cursor for macOS that is easier to see
 #: on both light and dark backgrounds. WARNING: this might make your
@@ -1223,6 +1231,8 @@ map ctrl+space         show_scrollback
 #: For more details, see launch.
 
 # map kitty_mod+n new_os_window
+# map kitty_mod+n new_os_window_with_cwd
+map cmd+n new_os_window_with_cwd
 
 #: Works like new_window above, except that it opens a top level OS
 #: kitty window. In particular you can use new_os_window_with_cwd to
