--- a/kubernetes/.kube/gpu_job.yaml
+++ b/kubernetes/.kube/gpu_job.yaml
@@ -1,10 +1,11 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: karl-job2 # specify your job name here
+  name: karl-job # specify your job name here
 spec:
   template:
     spec:
+
       #affinity:
         #nodeAffinity:
           #requiredDuringSchedulingIgnoredDuringExecution:
@@ -20,6 +21,7 @@ spec:
                       #- "A100"
                       #- "8000"
                       #- "A40"
+
       containers:
         - name: gpu-container
           image: gitlab-registry.nautilus.optiputer.net/jiacheng/docker-images:torch17v4_jiacheng
@@ -27,7 +29,7 @@ spec:
           command:
             - bash
             - -c
-            - "nvidia-smi && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_nyu.txt"
+            - "nvidia-smi && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_kitti_eigen.txt"
               #args:
               #- ""
 
