--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -63,7 +63,7 @@ yabai -m config layout                       bsp
 # yabai -m config bottom_padding               12
 # yabai -m config left_padding                 12
 # yabai -m config right_padding                12
-# yabai -m config window_gap                   00
+yabai -m config window_gap                   0
 
 ## focus on mouse after closing window
 yabai -m signal --add event=window_destroyed action="yabai -m query --windows --window &> /dev/null || yabai -m window --focus mouse"
