Enable lig and font feature

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -73,8 +73,8 @@ adjust_baseline 5
 #:     symbol_map codepoints Font Family Name
 
 # disable_ligatures never
-# disable_ligatures cursor
-disable_ligatures always
+disable_ligatures cursor
+# disable_ligatures always
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -129,6 +129,8 @@ disable_ligatures always
 #: Enable alternate zero and oldstyle numerals::
 
 #:     font_features FiraCode-Retina +zero +onum
+font_features FiraCode-Regular +zero +ss01 +ss02 +ss03 +ss05
+font_features FiraCode-Retina +zero +ss01 +ss02 +ss03 +ss05
 
 #: Enable only alternate zero::
 
