--- a/yabai/.skhdrc
+++ b/yabai/.skhdrc
@@ -10,6 +10,7 @@ lctrl + lcmd + lshift - e : emacsclient -c -a 'emacs'
 # lctrl + lcmd + lshift - return : open -n /Applications/Alacritty.app
 lctrl + lcmd + lshift - return : open -n /Applications/kitty.app
 lctrl + lcmd + lshift - b : /Applications/Brave\ Browser.app/Contents/MacOS/Brave\ Browser
+lctrl + lcmd + lshift - m : open /System/Applications/Music.app
 
 ## focus window
 rshift - w : yabai -m window --focus north || yabai -m display --focus north
