--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -43,7 +43,8 @@ yabai -m config normal_window_opacity        0.95
 yabai -m config window_border                on
 yabai -m config window_border_width          6
 
-yabai -m config active_window_border_color   0xff6272a4
+# yabai -m config active_window_border_color   0xff6272a4
+yabai -m config active_window_border_color   0xffa3c4ef
 yabai -m config normal_window_border_color   0xff44475a
 yabai -m config insert_feedback_color        0xffd75f5f
 
