--- a/zsh/.config/zsh/.zimrc
+++ b/zsh/.config/zsh/.zimrc
@@ -37,6 +37,9 @@ zmodule zsh-users/zsh-syntax-highlighting
 # Fish-like history search (up arrow) for Zsh.
 # zsh-users/zsh-history-substring-search must be sourced after zsh-users/zsh-syntax-highlighting
 zmodule zsh-users/zsh-history-substring-search
+
+zmodule https://github.com/agkozak/zsh-z
+
 # }}} End configuration added by Zim install
 
 
