--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,52 +6,23 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code Regular
-bold_font        Fira Code Retina
-italic_font      Fira Code Regular Italic
-bold_italic_font Fira Code Retina Italic
+#font_family      Fira Code Regular
+#bold_font        Fira Code Retina
+#italic_font      Menlo Italic
+#bold_italic_font Menlo Bold Italic
 
-#: You can specify different fonts for the bold/italic/bold-italic
-#: variants. To get a full list of supported fonts use the `kitty
-#: list-fonts` command. By default they are derived automatically, by
-#: the OSes font system. Setting them manually is useful for font
-#: families that have many weight variants like Book, Medium, Thick,
-#: etc. For example::
-
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
+font_family       JetBrainsMono Nerd Font
+#bold_font        Fira Code Retina
+#italic_font      Menlo Italic
+#bold_italic_font Menlo Bold Italic
 
 font_size 13.0
 
 #: Font size (in pts)
 
-# force_ltr no
-
-#: kitty does not support BIDI (bidirectional text), however, for RTL
-#: scripts, words are automatically displayed in RTL. That is to say,
-#: in an RTL script, the words "HELLO WORLD" display in kitty as
-#: "WORLD HELLO", and if you try to select a substring of an RTL-
-#: shaped string, you will get the character that would be there had
-#: the the string been LTR. For example, assuming the Hebrew word
-#: ירושלים, selecting the character that on the screen appears to be ם
-#: actually writes into the selection buffer the character י.  kitty's
-#: default behavior is useful in conjunction with a filter to reverse
-#: the word order, however, if you wish to manipulate RTL glyphs, it
-#: can be very challenging to work with, so this option is provided to
-#: turn it off. Furthermore, this option can be used with the command
-#: line program GNU FriBidi
-#: <https://github.com/fribidi/fribidi#executable> to get BIDI
-#: support, because it will force kitty to always treat the text as
-#: LTR, which FriBidi expects for terminals.
-
-# adjust top
-adjust_line_height  -6
-# adjust_column_width 0
-
-# adjust bottom
-adjust_baseline 5
+## TODO: Fira code only 
+#adjust_line_height  -6
+#adjust_baseline 5
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -59,18 +30,6 @@ adjust_baseline 5
 #: unmodified values. You can use negative pixels or percentages less
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
-
-# symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-
-#: Map the specified unicode codepoints to a particular font. Useful
-#: if you need special rendering for some symbols, such as for
-#: Powerline. Avoids the need for patched fonts. Each unicode code
-#: point is specified in the form U+<code point in hexadecimal>. You
-#: can specify multiple code points, separated by commas and ranges
-#: separated by hyphens. symbol_map itself can be specified multiple
-#: times. Syntax is::
-
-#:     symbol_map codepoints Font Family Name
 
 # disable_ligatures never
 disable_ligatures cursor
@@ -84,75 +43,9 @@ disable_ligatures cursor
 #: either using the kitty remote control facility or by defining
 #: shortcuts for it in kitty.conf, for example::
 
-#:     map alt+1 disable_ligatures_in active always
-#:     map alt+2 disable_ligatures_in all never
-#:     map alt+3 disable_ligatures_in tab cursor
+#font_features FiraCode-Regular +zero +ss01 +ss02 +ss03 +ss05
+#font_features FiraCode-Retina +zero +ss01 +ss02 +ss03 +ss05
 
-#: Note that this refers to programming ligatures, typically
-#: implemented using the calt OpenType feature. For disabling general
-#: ligatures, use the font_features setting.
-
-# font_features none
-
-#: Choose exactly which OpenType features to enable or disable. This
-#: is useful as some fonts might have features worthwhile in a
-#: terminal. For example, Fira Code Retina includes a discretionary
-#: feature, zero, which in that font changes the appearance of the
-#: zero (0), to make it more easily distinguishable from Ø. Fira Code
-#: Retina also includes other discretionary features known as
-#: Stylistic Sets which have the tags ss01 through ss20.
-
-#: Note that this code is indexed by PostScript name, and not the font
-#: family. This allows you to define very precise feature settings;
-#: e.g. you can disable a feature in the italic font but not in the
-#: regular font.
-
-#: On Linux, these are read from the FontConfig database first and
-#: then this, setting is applied, so they can be configured in a
-#: single, central place.
-
-#: To get the PostScript name for a font, use kitty + list-fonts
-#: --psnames:
-
-#: .. code-block:: sh
-
-#:     $ kitty + list-fonts --psnames | grep Fira
-#:     Fira Code
-#:     Fira Code Bold (FiraCode-Bold)
-#:     Fira Code Light (FiraCode-Light)
-#:     Fira Code Medium (FiraCode-Medium)
-#:     Fira Code Regular (FiraCode-Regular)
-#:     Fira Code Retina (FiraCode-Retina)
-
-#: The part in brackets is the PostScript name.
-
-#: Enable alternate zero and oldstyle numerals::
-
-#:     font_features FiraCode-Retina +zero +onum
-font_features FiraCode-Regular +zero +ss01 +ss02 +ss03 +ss05
-font_features FiraCode-Retina +zero +ss01 +ss02 +ss03 +ss05
-
-#: Enable only alternate zero::
-
-#:     font_features FiraCode-Retina +zero
-
-#: Disable the normal ligatures, but keep the calt feature which (in
-#: this font) breaks up monotony::
-
-#:     font_features TT2020StyleB-Regular -liga +calt
-
-#: In conjunction with force_ltr, you may want to disable Arabic
-#: shaping entirely, and only look at their isolated forms if they
-#: show up in a document. You can do this with e.g.::
-
-#:     font_features UnifontMedium +isol -medi -fina -init
-
-# box_drawing_scale 0.001, 1, 1.5, 2
-
-#: Change the sizes of the lines used for the box drawing unicode
-#: characters These values are in pts. They will be scaled by the
-#: monitor DPI to arrive at a pixel value. There must be four values
-#: corresponding to thin, normal, thick, and very thick lines.
 
 #: }}}
 
@@ -163,7 +56,6 @@ font_features FiraCode-Retina +zero +ss01 +ss02 +ss03 +ss05
 #: Default cursor color
 
 # cursor_text_color #111111
-#cursor_text_color background
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
@@ -419,65 +311,11 @@ mouse_hide_wait 0
 
 #: }}}
 
-#: Performance tuning {{{
-
-# repaint_delay 10
-
-#: Delay (in milliseconds) between screen updates. Decreasing it,
-#: increases frames-per-second (FPS) at the cost of more CPU usage.
-#: The default value yields ~100 FPS which is more than sufficient for
-#: most uses. Note that to actually achieve 100 FPS you have to either
-#: set sync_to_monitor to no or use a monitor with a high refresh
-#: rate. Also, to minimize latency when there is pending input to be
-#: processed, repaint_delay is ignored.
-
-# input_delay 3
-
-#: Delay (in milliseconds) before input from the program running in
-#: the terminal is processed. Note that decreasing it will increase
-#: responsiveness, but also increase CPU usage and might cause flicker
-#: in full screen programs that redraw the entire screen on each loop,
-#: because kitty is so fast that partial screen updates will be drawn.
-
-# sync_to_monitor yes
-
-#: Sync screen updates to the refresh rate of the monitor. This
-#: prevents tearing (https://en.wikipedia.org/wiki/Screen_tearing)
-#: when scrolling. However, it limits the rendering speed to the
-#: refresh rate of your monitor. With a very high speed mouse/high
-#: keyboard repeat rate, you may notice some slight input latency. If
-#: so, set this to no.
-
-#: }}}
-
-#: Terminal bell {{{
 
 enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
-
-# visual_bell_duration 0.0
-
-#: Visual bell duration. Flash the screen when a bell occurs for the
-#: specified number of seconds. Set to zero to disable.
-
-# window_alert_on_bell yes
-
-#: Request window attention on bell. Makes the dock icon bounce on
-#: macOS or the taskbar flash on linux.
-
-# bell_on_tab yes
-
-#: Show a bell symbol on the tab if a bell occurs in one of the
-#: windows in the tab and the window is not the currently focused
-#: window
-
-# command_on_bell none
-
-#: Program to run when a bell occurs.
-
-#: }}}
 
 #: Window layout {{{
 
@@ -581,37 +419,6 @@ hide_window_decorations yes
 #: Whether this works and exactly what effect it has depends on the
 #: window manager/operating system. Note that the effects of changing
 #: this setting when reloading config are undefined.
-
-# resize_debounce_time 0.1
-
-#: The time (in seconds) to wait before redrawing the screen when a
-#: resize event is received. On platforms such as macOS, where the
-#: operating system sends events corresponding to the start and end of
-#: a resize, this number is ignored.
-
-# resize_draw_strategy static
-
-#: Choose how kitty draws a window while a resize is in progress. A
-#: value of static means draw the current window contents, mostly
-#: unchanged. A value of scale means draw the current window contents
-#: scaled. A value of blank means draw a blank window. A value of size
-#: means show the window size in cells.
-
-# resize_in_steps no
-
-#: Resize the OS window in steps as large as the cells, instead of
-#: with the usual pixel accuracy. Combined with an
-#: initial_window_width and initial_window_height in number of cells,
-#: this option can be used to keep the margins as small as possible
-#: when resizing the OS window. Note that this does not currently work
-#: on Wayland.
-
-# confirm_os_window_close 0
-
-#: Ask for confirmation when closing an OS window or a tab that has at
-#: least this number of kitty windows in it. A value of zero disables
-#: confirmation. This confirmation also applies to requests to quit
-#: the entire application (all OS windows, via the quit action).
 
 #: }}}
 
@@ -720,7 +527,6 @@ hide_window_decorations yes
 
 foreground #ffffe0
 background #282a36
-#background #000000
 
 #: The foreground and background colors
 
@@ -1264,6 +1070,7 @@ map cmd+n new_os_window_with_cwd
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
 # map kitty_mod+t     new_tab
+map  cmd+t     new_tab_with_cwd
 # map kitty_mod+q     close_tab
 # map shift+cmd+w     close_os_window
 # map kitty_mod+.     move_tab_forward
