--- a/kubernetes/.kube/gpu_job.yaml
+++ b/kubernetes/.kube/gpu_job.yaml
@@ -1,11 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: karl-job # specify your job name here
+  name: karl-job-0.6
 spec:
   template:
     spec:
-
       #affinity:
         #nodeAffinity:
           #requiredDuringSchedulingIgnoredDuringExecution:
@@ -14,24 +13,15 @@ spec:
                   #- key: gpu-type
                     #operator: In
                     #values:
-                      #- "TITAN RTX"
-                      #- "V100"
-                      #- "T4"
-                      #- "3090Ti"
-                      #- "A100"
-                      #- "8000"
-                      #- "A40"
+                    #- "2080"
 
       containers:
         - name: gpu-container
           image: gitlab-registry.nautilus.optiputer.net/jiacheng/docker-images:torch17v4_jiacheng
-          # image: gitlab-registry.nrp-nautilus.io/kwkarlwang/nautilus:latest
           command:
             - bash
             - -c
-            - "nvidia-smi && source /data/karl/setup.sh && cd /data/karl/AdaBins-1 && python train.py args_train_kitti_eigen.txt"
-              #args:
-              #- ""
+            - "nvidia-smi && source /data/karl/setup.sh && cd /data/karl/srip-adabins && git pull origin seg_siyuan_karl && python train.py args_train_nyu_0.6.txt"
 
           volumeMounts:
             - mountPath: /data
@@ -41,12 +31,12 @@ spec:
           resources:
             limits:
               memory: 16Gi
-              nvidia.com/gpu: "4"
-              cpu: "12"
+              nvidia.com/gpu: "6"
+              cpu: "8"
             requests:
               memory: 16Gi
-              nvidia.com/gpu: "4"
-              cpu: "12"
+              nvidia.com/gpu: "6"
+              cpu: "8"
       restartPolicy: Never
       volumes:
         - name: data
