--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@
 #italic_font      Menlo Italic
 #bold_italic_font Menlo Bold Italic
 
-font_family       JetBrainsMono Nerd Font
+font_family       JetBrains Mono
 #bold_font        Fira Code Retina
 #italic_font      Menlo Italic
 #bold_italic_font Menlo Bold Italic
