--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -112,10 +112,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Fira Code
+    family: JetBrainsMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Light
+    style: Regular
 
   # Bold font face
   bold:
@@ -123,10 +123,10 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Fira Code
-
+    family: JetBrainsMono Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Medium
+
 
   # Italic font face
   italic:
@@ -134,7 +134,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Fira Code
+    family: JetBrainsMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -731,7 +731,7 @@ key_bindings:
 
 # Vi Mode
 #- { key: Space,  mods: Shift|Control, mode: Vi|~Search, action: ScrollToBottom          }
-#- { key: Space,  mods: Shift|Control, mode: ~Search,    action: ToggleViMode            }
+- { key: Space,  mods: Control, mode: ~Search,    action: ToggleViMode            }
 #- { key: Escape,                      mode: Vi|~Search, action: ClearSelection          }
 #- { key: I,                           mode: Vi|~Search, action: ScrollToBottom          }
 #- { key: I,                           mode: Vi|~Search, action: ToggleViMode            }
@@ -892,7 +892,6 @@ key_bindings:
 - { key: Key8,      mods: Alt,       chars: "\x1b8"                       }
 - { key: Key9,      mods: Alt,       chars: "\x1b9"                       }
 - { key: Key0,      mods: Alt,       chars: "\x1b0"                       }
-- { key: Space,     mods: Control,   chars: "\x00"                        } # Ctrl + Space
 - { key: Grave,     mods: Alt,       chars: "\x1b`"                       } # Alt + `
 - { key: Grave,     mods: Alt|Shift, chars: "\x1b~"                       } # Alt + ~
 - { key: Period,    mods: Alt,       chars: "\x1b."                       } # Alt + .
