--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -101,8 +101,11 @@ scrollback_lines 10000
 #: is changed it will only affect newly created windows, not existing
 #: ones.
 
-# scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+ #scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 scrollback_pager /usr/local/bin/nvim -u NONE -c "set nowrap nolist showtabline=0 foldcolumn=0 laststatus=0" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+
+
+#scrollback_pager nvimpager
 
 
 #: Program with which to view scrollback in a new window. The
