--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -33,11 +33,11 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 
 # split window
-bind C-s split-window -v
-bind C-v split-window -h
+bind C-s split-window -v -c "#{pane_current_path}"
+bind C-v split-window -h -c "#{pane_current_path}"
 
 # create window
-bind C-c new-window
+bind C-c new-window -c "#{pane_current_path}"
 # enxt and previous window
 bind C-n next
 bind C-p prev
