--- a/zsh/.config/zsh/.zimrc
+++ b/zsh/.config/zsh/.zimrc
@@ -2,15 +2,11 @@
 # -------
 # Modules
 # -------
-
-# Sets sane Zsh built-in environment options.
 zmodule environment
 # Provides handy git aliases and functions.
 #zmodule git
 # Applies correct bindkeys for input events.
 zmodule input
-# Sets a custom terminal title.
-# zmodule termtitle
 # Utility aliases and functions. Adds colour to ls, grep and less.
 zmodule utility
 
@@ -18,11 +14,11 @@ zmodule utility
 # Prompt
 #
 # Exposes to prompts how long the last command took to execute, used by asciiship.
-zmodule duration-info
+# zmodule duration-info
 # Exposes git repository status information to prompts, used by asciiship.
 #zmodule git-info
 # A heavily reduced, ASCII-only version of the Spaceship and Starship prompts.
-zmodule asciiship
+# zmodule asciiship
 
 # Additional completion definitions for Zsh.
 zmodule zsh-users/zsh-completions
@@ -31,6 +27,7 @@ zmodule zsh-users/zsh-completions
 zmodule completion
 # Fish-like autosuggestions for Zsh.
 zmodule zsh-users/zsh-autosuggestions
+
 # Fish-like syntax highlighting for Zsh.
 # zsh-users/zsh-syntax-highlighting must be sourced after completion
 zmodule zsh-users/zsh-syntax-highlighting
@@ -38,11 +35,8 @@ zmodule zsh-users/zsh-syntax-highlighting
 # zsh-users/zsh-history-substring-search must be sourced after zsh-users/zsh-syntax-highlighting
 zmodule zsh-users/zsh-history-substring-search
 
-zmodule https://github.com/agkozak/zsh-z
 
 # }}} End configuration added by Zim install
 
+zmodule https://github.com/agkozak/zsh-z
 
-#if [ "$INSIDE_EMACS" != "vterm" ]; then
-    #zmodule jeffreytse/zsh-vi-mode
-#fi
