--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 
 vim/*/*/plugged
 
-zsh/*/*/.zsh_history
+zsh/.zsh_history
 
 kubernetes/*/config
-/zsh/.config/zsh/.zsh_sessions/
-/zsh/.config/zsh/.zcompdump-Karl’s MacBook Pro-5.8
-/zsh/.config/zsh/*.zwc
-/zsh/.config/zsh/.zcompdump.zwc.old
-/zsh/.config/zsh/.zim/*
+/zsh/.zsh_sessions
+/zsh/.zcompdump-Karl’s MacBook Pro-5.8
+/zsh/*.zwc
+/zsh/.zcompdump.zwc.old
+/zsh/.zim
 *.old
 /kubernetes/.kube/cache/
 /zsh/.config/zsh/.zcompcache/
