--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -7,6 +7,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g base-index 1
+set-option -g renumber-windows on
 
 # status style
 #set -g status-style 'bg=#3E2029 fg=#f8f8f2'
