--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -28,10 +28,15 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'pb
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
 
 # resize-pane
-bind h resize-pane -L 5
-bind j resize-pane -D 5
-bind k resize-pane -U 5
-bind l resize-pane -R 5
+bind -r h resize-pane -L 5
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+
+bind Left select-pane -L
+bind Down select-pane -D
+bind Up select-pane -U
+bind Right select-pane -R
 
 # split window
 bind C-s split-window -v -c "#{pane_current_path}"
