--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,9 @@ vim/*/*/plugged
 zsh/.zsh_history
 
 kubernetes/*/config
-/zsh/.zsh_sessions
-/zsh/.zcompdump-Karl’s MacBook Pro-5.8
-/zsh/*.zwc
-/zsh/.zcompdump.zwc.old
-/zsh/.zim
-*.old
+
+
 /kubernetes/.kube/cache/
-/zsh/.config/zsh/.zcompcache/
 /vim/.config/nvim/*.json
 /karabiner/.config/karabiner/automatic_backups/
 
@@ -20,3 +15,4 @@ vim/.config/nvim/plugin/packer_compiled.lua
 .zim
 
 zsh/.zsh_history
+zsh/zsh/plugins
