--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -60,31 +60,7 @@ disable_ligatures cursor
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
-
-#: The cursor shape can be one of (block, beam, underline). Note that
-#: when reloading the config this will be changed only if the cursor
-#: shape has not been set by the program running in the terminal.
-
-# cursor_beam_thickness 1.5
-
-#: Defines the thickness of the beam cursor (in pts)
-
-# cursor_underline_thickness 2.0
-
-#: Defines the thickness of the underline cursor (in pts)
-
 cursor_blink_interval 0
-
-#: The interval (in seconds) at which to blink the cursor. Set to zero
-#: to disable blinking. Negative values mean use system default. Note
-#: that numbers smaller than repaint_delay will be limited to
-#: repaint_delay.
-
-# cursor_stop_blinking_after 15.0
-
-#: Stop blinking cursor after the specified number of seconds of
-#: keyboard inactivity.  Set to zero to never stop blinking.
 
 #: }}}
 
@@ -1268,3 +1244,6 @@ map  cmd+t     new_tab_with_cwd
 #: }}}
 
 #: }}}
+
+map shift+enter send_text all \x1b[13;2u
+map ctrl+enter send_text all \x1b[13;5u
