--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,6 +1,3 @@
-#import:
-  #- ~/.config/alacritty/dracula.yml
-
 env:
   TERM: xterm-256color
 
@@ -20,16 +17,16 @@ scrolling:
 
 font:
   normal:
-    family: JetBrainsMono Nerd Font
+    family: FiraCode Nerd Font
     style: Regular
   bold:
-    family: JetBrainsMono Nerd Font
+    family: FiraCode Nerd Font
     style: Medium
   italic:
-    family: JetBrainsMono Nerd Font
+    family: Fira Sans
     style: Italic
   bold_italic:
-    family: JetBrainsMono Nerd Font
+    family: Fira Sans
     style: Medium Italic
   size: 13.0
   use_thin_strokes: true
