--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -56,6 +56,7 @@ disable_ligatures cursor
 #: Default cursor color
 
 # cursor_text_color #111111
+cursor_text_color #282a36
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
@@ -754,8 +755,8 @@ allow_remote_control yes
 #: with the mouse. The special value of ``ask`` means that kitty will
 #: ask before opening the link.
 
-# term xterm-kitty
-term xterm-256color
+term xterm-kitty
+# term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
