--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -8,6 +8,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g base-index 1
 set-option -g renumber-windows on
+set-option -g focus-events on
 
 # status style
 #set -g status-style 'bg=#3E2029 fg=#f8f8f2'
