--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -1,7 +1,7 @@
 set -g mouse on
-set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-kitty"
 # tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",xterm-256color*:Tc"
+set -ga terminal-overrides ",xterm-kitty*:Tc"
 set -s escape-time 0
 unbind C-b
 set-option -g prefix C-a
