--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -52,6 +52,7 @@ disable_ligatures cursor
 #: Cursor customization {{{
 
 # cursor #cccccc
+# cursor #ffffe0
 
 #: Default cursor color
 
@@ -341,22 +342,6 @@ enable_audio_bell no
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-# window_margin_width 0
-
-#: The window margin (in pts) (blank area outside the border). A
-#: single value sets all four sides. Two values set the vertical and
-#: horizontal sides. Three values set top, horizontal and bottom. Four
-#: values set top, right, bottom and left.
-
-# single_window_margin_width -1
-
-#: The window margin (in pts) to use when only a single window is
-#: visible. Negative values will cause the value of
-#: window_margin_width to be used instead. A single value sets all
-#: four sides. Two values set the vertical and horizontal sides. Three
-#: values set top, horizontal and bottom. Four values set top, right,
-#: bottom and left.
-
 window_padding_width 4
 
 #: The window padding (in pts) (blank area between the text and the
@@ -580,7 +565,7 @@ background #282a36
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
 
-color0 #000000
+color0 #282a36
 color8 #676767
 
 #: black
