--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -52,12 +52,13 @@ disable_ligatures cursor
 #: Cursor customization {{{
 
 # cursor #cccccc
-# cursor #ffffe0
+cursor #ffffe0
 
 #: Default cursor color
 
 # cursor_text_color #111111
 cursor_text_color #282a36
+# cursor_text_color background
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
