--- a/vim/.tmux.conf
+++ b/vim/.tmux.conf
@@ -1,7 +1,9 @@
 set -g mouse on
-set -g default-terminal "xterm-kitty"
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 # tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",xterm-kitty*:Tc"
+# set -ga terminal-overrides ",xterm-kitty*:Tc"
 set -s escape-time 0
 unbind C-b
 set-option -g prefix C-a
