--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -17,16 +17,16 @@ scrolling:
 
 font:
   normal:
-    family: FiraCode Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Regular
   bold:
-    family: FiraCode Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Medium
   italic:
-    family: Fira Sans
+    family: JetBrainsMono Nerd Font
     style: Italic
   bold_italic:
-    family: Fira Sans
+    family: JetBrainsMono Nerd Font
     style: Medium Italic
   size: 13.0
   use_thin_strokes: true
