--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,10 +11,10 @@
 #italic_font      Menlo Italic
 #bold_italic_font Menlo Bold Italic
 
-font_family       JetBrains Mono
-#bold_font        Fira Code Retina
-#italic_font      Menlo Italic
-#bold_italic_font Menlo Bold Italic
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Medium
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Medium Italic
 
 font_size 10.0
 
