--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -12,9 +12,9 @@
 #bold_italic_font Menlo Bold Italic
 
 font_family      JetBrains Mono Regular
-bold_font        JetBrains Mono Medium
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Medium Italic
+# bold_font        JetBrains Mono Medium
+# italic_font      JetBrains Mono Italic
+# bold_italic_font JetBrains Mono Medium Italic
 
 font_size 10.0
 
@@ -780,7 +780,7 @@ term xterm-kitty
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
-macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -1234,3 +1234,11 @@ map  cmd+t     new_tab_with_cwd
 
 map shift+enter send_text all \x1b[13;2u
 map ctrl+enter send_text all \x1b[13;5u
+# remove word
+map alt+backspace send_text all \x17
+# remove line
+map super+backspace send_text all \x15
+# move to beginning
+map super+left send_text all \x01
+# move to end
+map super+right send_text all \x05
