--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -29,6 +29,7 @@ yabai -m rule --add app="^console$" manage=off
 yabai -m rule --add app="^Logi Options$" manage=off layer=above
 yabai -m rule --add app="^Preview$" manage=off
 yabai -m rule --add app="^WeChat$" manage=off
+yabai -m rule --add app="^KeyCastr$" manage=off
 
 
 ## global settings
