--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -30,6 +30,7 @@ yabai -m rule --add app="^Logi Options$" manage=off layer=above
 yabai -m rule --add app="^Preview$" manage=off
 yabai -m rule --add app="^WeChat$" manage=off
 yabai -m rule --add app="^KeyCastr$" manage=off
+yabai -m rule --add app="^FaceTime$" manage=off
 
 
 ## global settings
