--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -47,7 +47,8 @@ disable_ligatures cursor
 
 #: Cursor customization {{{
 
-cursor #ffffe0
+# cursor #ffffe0
+cursor #e1f5fe
 
 #: Default cursor color
 
